--- a/map.html
+++ b/map.html
@@ -13,7 +13,7 @@
     		padding: 0;
 			}
         #map {
-  					height: 800px; // Or whatever height you like
+  					height: 800px;
   					margin-top: 0%;
   					width: 100%
   					padding: 0;
